--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ footer {
     margin-top: 2rem;
 }
 
-.footer img {
+footer img {
     display: block;          
     max-width: 100%;         
     height: auto;            
