--- a/styles.css
+++ b/styles.css
@@ -49,14 +49,17 @@ body {
     font-size: 1.05rem;
 }
 
-.quote {
-    font-style: italic;                  
-    color: #555;                        
-    border-left: 4px solid #2a4d5c;     
-    padding: 0.5rem 1rem;               
-    margin: 1rem 0;                     
-    background-color: #f0f4f8;         
-    border-radius: 4px;                 
+.content .quote {
+    font-style: italic;
+    color: #555;
+    border-left: 4px solid #2a4d5c;
+    padding: 0.5rem 1rem;
+    margin: 1rem 0;
+    background-color: #f0f4f8;
+    border-radius: 4px;
+    width: calc(100% + 3rem);  
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
 }
 
 /* Footer */
