--- a/styles.css
+++ b/styles.css
@@ -57,9 +57,9 @@ body {
     margin: 1rem 0;
     background-color: #f0f4f8;
     border-radius: 4px;
-    width: calc(90% + 3rem);  
-    margin-left: -1.5rem;
-    margin-right: -1.5rem;
+    width: auto;  
+    margin-left: 0;
+    margin-right: 0;
 }
 
 /* Footer */
