--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 }
 
 .content h3 {
-    margin-top: 1.2rem;
+    margin-top: 1.4em;
     font-size: 1.2rem;
     margin-bottom: 0.5rem;
     color: #2a4d5c;
